Update critical css

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -21,7 +21,17 @@
     </script>
 
     <style>
+        /* Critical CSS */
+        body {
+            font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        }
+
         .container{
+            font-size: 14pt;
+        }
+
+        code {
+            font-family: monospace, 'SourceCodePro-Regular';
             font-size: 14pt;
         }
     </style>
