Update critical css

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -22,17 +22,39 @@
 
     <style>
         /* Critical CSS */
-        body {
+        body,
+        .container,
+        code{
+            font-size: 18pt;
             font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-
-        .container{
-            font-size: 14pt;
         }
 
         code {
             font-family: monospace, 'SourceCodePro-Regular';
-            font-size: 14pt;
+        }
+
+        h1{
+            font-size: 28pt;
+        }
+
+        h2{
+            font-size: 24pt;
+        }
+
+        h3 {
+            font-size: 18pt;
+        }
+
+        h4 {
+            font-size: 15pt;
+        }
+
+        h5 {
+            font-size: 12pt;
+        }
+
+        h6 {
+            font-size: 9pt;
         }
     </style>
 </head>
