Update critical css

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -33,7 +33,7 @@
             font-family: monospace, 'SourceCodePro-Regular';
         }
 
-        h1{
+        h1, embeddedtitle{
             font-size: 28pt;
         }
 
