Allow user to select font

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -26,11 +26,10 @@
         .container,
         code{
             font-size: 18pt;
-            font-family: monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         }
 
         code {
-            font-family: monospace, 'SourceCodePro-Regular';
+            line-height: 1.2;
         }
 
         h1, embeddedtitle{
