Adjust embed title (heading)

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -32,10 +32,11 @@
             line-height: 1.2;
         }
 
-        h1, embeddedtitle{
+        h1{
             font-size: 28pt;
         }
 
+        embeddedtitle,
         h2{
             font-size: 24pt;
         }
