Use monospace font by default for code

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -30,7 +30,7 @@
 
         code {
             line-height: 1.2;
-            font-family: monospace;
+            font-family: monospace, 'SourceCodePro-Regular';
         }
 
         h1{
