--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -34,10 +34,10 @@
         }
 
         h1{
-            font-size: 28pt;
+            font-size: 24pt;
+            font-style: italic;
         }
 
-        embeddedtitle,
         h2{
             font-size: 24pt;
         }
