change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -28,6 +28,10 @@
         font-size: 18pt;
       }
 
+      .container-wrapper {
+        max-width: calc(100vw/3);
+      }
+
       code {
         line-height: 1.2;
         font-family: monospace, "SourceCodePro-Regular";
