change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -28,6 +28,10 @@
         font-size: 18pt;
       }
 
+      #page_holder{
+          overwflow-x: hidden;
+      }
+
       .container-wrapper {
         max-width: calc(100vw/3);
       }
