change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -30,6 +30,10 @@
             font-size: 18pt;
         }
 
+        .container {
+            max-width: 80ch;
+        }
+
         code {
             line-height: 1.2;
             font-family: monospace, "SourceCodePro-Regular";
