change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -30,6 +30,15 @@
             font-size: 18pt;
         }
 
+        body {
+            max-width: 1920px;
+            margin: 0 auto;
+        }
+        .theme-obs-dark .container, .theme-obs-light .container, .theme-obs-dark
+        .container_filler, .theme-obs-light .container_filler {
+            border-top: 0;
+        }
+
         .container {
             max-width: 80ch;
         }
