--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -34,6 +34,9 @@
             max-width: 1920px;
             margin: 0 auto;
         }
+
+        .theme-obs-light .left_pane, .theme-obs-light .right_pane,
+        .theme-obs-dark .left_pane, .theme-obs-dark .right_pane,
         .theme-obs-dark .container, .theme-obs-light .container, .theme-obs-dark
         .container_filler, .theme-obs-light .container_filler {
             border-top: 0;
