change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -35,6 +35,16 @@
             margin: 0 auto;
         }
 
+        ::-webkit-scrollbar {
+            width: 0.6rem;
+            height: 0.6rem;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            border: 0px;
+            border-radius: 10px;
+        }
+
         .theme-obs-light .left_pane, .theme-obs-light .right_pane,
         .theme-obs-dark .left_pane, .theme-obs-dark .right_pane,
         .theme-obs-dark .container, .theme-obs-light .container, .theme-obs-dark
