change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -28,6 +28,7 @@
         .container,
         code {
             font-size: 18pt;
+            font-family: monospace, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
         }
 
         body {
