change default styling

--- a/templates/obsidianhtml.html
+++ b/templates/obsidianhtml.html
@@ -36,7 +36,7 @@
         }
 
         body {
-            max-width: 81ch;
+            max-width: calc(81ch + 64px);
             margin: 0 auto;
         }
 
