--- a/.obsidian/snippets/main.css
+++ b/.obsidian/snippets/main.css
@@ -29,6 +29,16 @@ iframe[src*="youtu"] {
   }
 }
 
+.sr-flashcard code{
+  color: var(--code-normal);
+  font-family: var(--font-monospace);
+  background-color: var(--code-background);
+  border-radius: var(--code-radius);
+  font-size: var(--code-size);
+  padding: 0.1em 0.25em;
+  -webkit-box-decoration-break: clone;
+}
+
 @media only screen and (min-width: 768px) {
   .sr-modal-content {
     max-width: 100ch;
