--- a/.obsidian/snippets/main.css
+++ b/.obsidian/snippets/main.css
@@ -13,7 +13,12 @@ br.f{
     content: '';
     height: 1px;
     background: repeating-linear-gradient(90deg, var(--code-normal) 0, var(--code-normal) 4px, transparent 4px, transparent 8px);
-    margin: .4rem 0;
+    margin: 0.2rem 0;
+    padding: 0;
+}
+
+.cm-line br.f{
+  margin: -1rem 0;
 }
 
 .cm-s-obsidian .HyperMD-codeblock {
