Adjust sr-related blocks

--- a/.obsidian/snippets/main.css
+++ b/.obsidian/snippets/main.css
@@ -55,6 +55,9 @@ iframe[src*="youtu"] {
   }
 }
 
+.sr-flashcard .sr-content{
+  flex-grow: none;
+}
 .sr-flashcard code{
   color: var(--code-normal);
   font-family: var(--font-monospace);
