--- a/.obsidian/snippets/main.css
+++ b/.obsidian/snippets/main.css
@@ -7,13 +7,13 @@ body {
 }
 
 /* Custom flashcard separator */
-br.f{
+.f{
     display: block;
     max-width: 40ch;
     content: '';
     height: 1px;
     background: repeating-linear-gradient(90deg, var(--code-normal) 0, var(--code-normal) 4px, transparent 4px, transparent 8px);
-    margin: 0.2rem 0;
+    margin-bottom: 1rem;
     padding: 0;
 }
 
