Adjus separator styles

--- a/.obsidian/snippets/main.css
+++ b/.obsidian/snippets/main.css
@@ -9,12 +9,10 @@ body {
 /* Custom flashcard separator */
 .f{
     display: block;
-    max-width: 40ch;
     content: '';
     height: 1px;
+    margin-top: .2rem;
     background: repeating-linear-gradient(90deg, var(--code-normal) 0, var(--code-normal) 4px, transparent 4px, transparent 8px);
-    margin-bottom: 1rem;
-    padding: 0;
 }
 
 @media (min-width: 768px) {
